Fixed grid gaps

--- a/site/web/app/themes/sage/resources/assets/styles/layouts/_article-grid.scss
+++ b/site/web/app/themes/sage/resources/assets/styles/layouts/_article-grid.scss
@@ -68,39 +68,19 @@
 	
 	@media (min-width: $breakpoint--sm) {
 		& > article {
-			margin-right: 1rem;
-			flex-basis: calc(50% - 1rem);
-
-			&:nth-of-type(2n) {
-				margin-right: 0;
-			}
+			flex-basis: calc(50% - .75rem);
 		}
 	}
 
 	@media (min-width: $breakpoint--md) {
 		& > article {
 			flex-basis: calc(33.3% - 1rem);
-			&:nth-of-type(2n) {
-				margin-right: 1rem;
-			}
-			&:nth-of-type(3n) {
-				margin-right: 1rem;
-			}
-			&:nth-of-type(4n) {
-				margin-right: 0;
-			}
 		}
 	}
 
 	@media (min-width: $breakpoint--lg) {
 		&:not(.article-grid--front) > article:not(.grid-hero) {
 			flex-basis: calc(25% - 1rem);
-			&:nth-of-type(4n) {
-				margin-right: 1rem;
-			}
-			&:nth-of-type(5n) {
-				margin-right: 0;
-			}
 		}
 		
 	}
